--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.6"
 services:
 
   cobol-dev:
-    image: hyrumce/cobol-cgi:v2
+    image: "hyrumce/cobol-cgi:v2"
     depends_on:
       - mariadb-dev
     ports:
@@ -13,7 +13,7 @@ services:
       - backend
 
   mariadb-dev:
-    image: mariadb:latest
+    image: "mariadb:latest"
     #image: mariadb:10.2
     hostname: cob-dev-db
     ports:
