--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: "3.6"
 services:
 
   cobol-dev:
-    image: "hyrumce/cobol-cgi:v2"
+    image: "hyrumce/cobol-cgi:v3"
     depends_on:
       - mariadb-dev
+      - db2
     ports:
       - "5300:80"
     volumes:
@@ -32,6 +33,23 @@ services:
     restart: on-failure
     volumes:
      - ${PWD}/mariadb:/var/lib/mysql
+
+  db2:
+    image: ibmcom/db2
+    privileged: true
+    hostname: db2-cob-dev-db
+    ports:
+      - 50000:50000
+    environment:
+      # DB_USER: db2inst1
+      DB2INST1_PASSWORD: 123456
+      LICENSE: accept
+      DBNAME: COBDEV
+      command: 'db2start'
+    networks:
+      - backend
+    volumes:
+      - ${PWD}/db2:/database
 
 networks:
   frontend:
